--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,21 @@
+# https://docs.spring.io/spring-boot/docs/1.4.x/reference/html/common-application-properties.html
+
+# BANNER
+# Banner file encoding.
+banner.charset=UTF-8
+# Banner file location.
+banner.location=classpath:banner.txt
+# Banner image file location (jpg/png can also be used).
+banner.image.location=classpath:banner.gif
+# Width of the banner image in chars (default 76)
+banner.image.width=
+# Height of the banner image in chars (default based on image height)
+banner.image.height=
+ # Left hand image margin in chars (default 2)
+banner.image.margin=
+# If images should be inverted for dark terminal themes (default false)
+banner.image.invert=
+
 server.port=8080
 server.contextPath=/mvch
 
@@ -7,7 +25,7 @@ spring.mvc.view.suffix=.jsp
 logging.level=DEBUG
 # Database
 db.driver=com.mysql.jdbc.Driver
-db.url=jdbc:mysql://localhost:3306/customerdata
+db.url=jdbc:mysql://localhost:3306/test
 db.username=root
 db.password=password
  
